--- a/ChatBaseBall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ChatBaseBall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1612,15 +1612,15 @@ PerfCounters.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=True
+DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BP/BP_GameMode.BP_GameMode
 OpenAssetsAtExit=/Game/Widget/WBP_InputBall.WBP_InputBall
 OpenAssetsAtExit=/Game/BP/BP_PlayerController.BP_PlayerController
+OpenAssetsAtExit=/Game/BP/BP_GameMode.BP_GameMode
 
 [PluginBrowser]
 InstalledPlugins=NDIMedia
@@ -1782,6 +1782,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -2071,7 +2072,6 @@ WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
-InterchangeFbxSettings.FBX =True
 TextBlock.Layout=True
 TextBlock.Content=True
 TextBlock.Appearance=True
@@ -2127,7 +2127,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
 
 [RootWindow]
-ScreenPosition=X=319.000 Y=188.000
+ScreenPosition=X=126.000 Y=168.000
 WindowSize=X=1246.000 Y=1047.000
 InitiallyMaximized=False
 
@@ -2163,9 +2163,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BP/BP_PlayerController
-MRUItem1=/Game/Widget/WBP_InputBall
-MRUItem2=/Game/BP/BP_GameMode
+MRUItem0=/Game/BP/BP_GameMode
+MRUItem1=/Game/BP/BP_PlayerController
+MRUItem2=/Game/Widget/WBP_InputBall
 MRUItem3=/Game/Level/Level_1
 MRUItem4=/Engine/EditorBlueprintResources/StandardMacros
 
@@ -2294,6 +2294,7 @@ DeveloperSettings=
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/BP/BP_PlayerController.BP_PlayerController=0
 /Game/BP/BP_GameMode.BP_GameMode=0
+/Game/Level/Level_1.Level_1:PersistentLevel.Level_1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2317,8 +2318,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
